--- a/Lab_01_BCY.ucf
+++ b/Lab_01_BCY.ucf
@@ -4,6 +4,6 @@ NET "B" LOC = "H18";
 NET "C" LOC = "G18";
 
 # LED Outputs
-NET "X" LOC = "K15"; # Sch name = LDO
+NET "X" LOC = "K15"; # Sch name = LD0
 NET "Y" LOC = "J15"; 
 NET "Z" LOC = "J14";
